--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,15 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: SynopsysDetectTask@8
+  inputs:
+    BlackDuckService: 'Azure_Spring_Service_Test'
+    DetectArguments: |
+      --blackduck.trust.cert=true
+      --detect.blackduck.signature.scanner.snippet.matching=FULL_SNIPPET_MATCHING
+      --detect.blackduck.signature.scanner.individual.file.matching=ALL
+      --detect.detector.search.depth=100
+      --detect.blackduck.signature.scanner.upload.source.mode=true
+      --detect.project.name=Spring_Azure_Test_Dan
+      --detect.project.version.name=1.0
+    DetectVersion: 'latest'
